[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/FirstPerson.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Draw3D.gd" type="Script" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 1.5

[sub_resource type="CubeMesh" id=3]

[sub_resource type="CapsuleShape" id=4]
height = 0.002

[sub_resource type="SpatialMaterial" id=5]

[node name="FirstPerson" type="KinematicBody"]
collision_layer = 17
collision_mask = 5
script = ExtResource( 1 )
hand_default_position = Vector3( 0, 0.635, -0.209 )
hand_ads_position = Vector3( 0, 0.635, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Head" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.787506, 0 )
fov = 50.0

[node name="AimCast" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -1000 )
collision_mask = 3
collide_with_areas = true

[node name="MeshInstance" type="MeshInstance" parent="Head/Camera/AimCast"]
transform = Transform( 0.000917921, 0, 0, 0, 0.000917921, 0, 0, 0, 2.35436, 0, 0, -1.92528 )
mesh = SubResource( 3 )
material/0 = null

[node name="Reach" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -2 )

[node name="ShotgunContainer" type="Spatial" parent="Head/Camera"]
visible = false

[node name="ShotgunCast" type="RayCast" parent="Head/Camera/ShotgunContainer"]
cast_to = Vector3( 0, 0, -100 )

[node name="ShotgunCast2" type="RayCast" parent="Head/Camera/ShotgunContainer"]
cast_to = Vector3( 0, 0, -100 )

[node name="ShotgunCast3" type="RayCast" parent="Head/Camera/ShotgunContainer"]
cast_to = Vector3( 0, 0, -100 )

[node name="ShotgunCast4" type="RayCast" parent="Head/Camera/ShotgunContainer"]
cast_to = Vector3( 0, 0, -100 )

[node name="ShotgunCast5" type="RayCast" parent="Head/Camera/ShotgunContainer"]
cast_to = Vector3( 0, 0, -100 )

[node name="ShotgunCast6" type="RayCast" parent="Head/Camera/ShotgunContainer"]
cast_to = Vector3( 0, 0, -100 )

[node name="Control" type="Control" parent="Head/Camera"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthCounter" type="TextEdit" parent="Head/Camera/Control"]
margin_left = 14.0
margin_top = 16.0
margin_right = 54.0
margin_bottom = 56.0
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrencyCounter" type="TextEdit" parent="Head/Camera/Control"]
margin_left = 15.0
margin_top = 56.0
margin_right = 55.0
margin_bottom = 96.0
text = "000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MagCounter" type="TextEdit" parent="Head/Camera/Control"]
margin_left = 14.0
margin_top = 506.0
margin_right = 54.0
margin_bottom = 546.0
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoCounter" type="TextEdit" parent="Head/Camera/Control"]
margin_left = 15.0
margin_top = 547.0
margin_right = 55.0
margin_bottom = 587.0
text = "000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InteractablesRegion" type="Area" parent="Head/Camera"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="Head/Camera/InteractablesRegion"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.35567e-07, -0.0882664, -0.966068 )
shape = SubResource( 4 )

[node name="Muzzle" type="Spatial" parent="Head/Camera"]
transform = Transform( 0.0975359, 0, 0, 0, 0.0975359, 0, 0, 0, 0.643667, 0.432773, -0.38523, -0.98389 )

[node name="Hand" type="Spatial" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.249, 0.591, -0.36 )

[node name="HandLocation" type="Spatial" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.471012, 0.320877, -0.51404 )

[node name="GunADSPos" type="Position3D" parent="Head/HandLocation"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.484266, 0.405548, -1.06784 )

[node name="Gun1Pos" type="Position3D" parent="Head/HandLocation"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0300514, -1.57983 )

[node name="Gun2Pos" type="Position3D" parent="Head/HandLocation"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.137023, -0.0319355, -1.36933 )

[node name="Gun3Pos" type="Position3D" parent="Head/HandLocation"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.103386, 0.180609, -1.74647 )

[node name="Gun4Pos" type="Position3D" parent="Head/HandLocation"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.102321, 0.0690763, -0.797434 )

[node name="Gun5Pos" type="Position3D" parent="Head/HandLocation"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.053616, 0.079267, -1.1864 )

[node name="BoltActionPos" type="Position3D" parent="Head/HandLocation"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.22099, 0.331352, -1.37561 )

[node name="GroundCheck" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -1.5, 0 )

[node name="HeadBonker" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.305834, 0 )
enabled = true
cast_to = Vector3( 0, 1, 0 )

[node name="FireRate" type="Timer" parent="."]
one_shot = true

[node name="Draw3D" type="ImmediateGeometry" parent="."]
material_override = SubResource( 5 )
cast_shadow = 0
script = ExtResource( 2 )

[connection signal="body_entered" from="Head/Camera/InteractablesRegion" to="." method="_on_InteractablesRegion_body_entered"]
[connection signal="body_exited" from="Head/Camera/InteractablesRegion" to="." method="_on_InteractablesRegion_body_exited"]
